--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,9 +9,9 @@ services:
 variables:
  MYSQL_DATABASE: pubg_tour
  MYSQL_CI_URL: jdbc:mysql://mysql/pubg_tour
- MYSQL_USER: app_root
- MYSQL_PASSWORD: root123
- MYSQL_ROOT_PASSWORD: root
+ MYSQL_USER: 
+ MYSQL_PASSWORD: 
+ MYSQL_ROOT_PASSWORD: 
 cache:
   paths:
   - .m2/repository
