--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,10 +30,10 @@ services:
    ports:
      - 3306:3306
    environment:
-     MYSQL_ROOT_PASSWORD: root
-     MYSQL_DATABASE: pubg_tour
-     MYSQL_USER: app_root
-     MYSQL_PASSWORD: root123
+     MYSQL_ROOT_PASSWORD: 
+     MYSQL_DATABASE: 
+     MYSQL_USER: 
+     MYSQL_PASSWORD: 
  
   angular:
     image: angular-app
